<resources>
    <string name="app_name">Practice Project</string>
    <string name="leaderboard">LEADERBOARD</string>
    <string name="project_submission"> Project Submission</string>
    <string name="submit">submit</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">   Email Address</string>
    <string name="project_on_github_link">   Project on GITHUB (link)</string>
</resources>